Main Footer Info Done

--- a/01-Dev-Tools-And-Workflow/first-exercise/_layouts/main.html
+++ b/01-Dev-Tools-And-Workflow/first-exercise/_layouts/main.html
@@ -32,10 +32,23 @@
           <li>
             <a href=" {{site.github_url_pesho}} " target="_blank"> <i class="fab fa-github"></i> {{site.github_username_pesho}}</a>
           </li>
+          <li>
+            <a href="{{facebook_url_pesho}}" target="_blank"> <i class="fab fa-facebook-square"></i> {{site.facebook_username_pesho}}</a>
+          </li>
           <li></li>
         </ul>
       </div>
-      <div class="footer-container kamen-data">Data Kamen</div>
+      <div class="footer-container kamen-data">
+        <p>Kamen's Contacts</p>
+        <ul>
+          <li>
+            <a href=" {{site.github_url_kamen}} " target="_blank"> <i class="fab fa-github"></i> {{site.github_username_kamen}}</a>
+          </li>
+          <li>
+            <a href="{{facebook_url_kamen}}" target="_blank"> <i class="fab fa-facebook-square"></i> {{site.facebook_username_kamen}}</a>
+          </li>
+        </ul>
+        </div>
       </div>
     </div>
   </div>
