--- a/01-Dev-Tools-And-Workflow/first-exercise/css/layout.css
+++ b/01-Dev-Tools-And-Workflow/first-exercise/css/layout.css
@@ -51,12 +51,16 @@ html {
 
 /* setting the footer to flex-row  and justify content*/
 
-.site-footer{
+.site-footer {
   display: flex;
   flex-flow: row wrap;
   justify-content: space-between;
   text-align: center;
   padding: 2rem;
+}
+
+.site-footer ul {
+  list-style-type: none;
 }
 
 /* sizing the footer containers so they fit in a row */
