--- a/01-Dev-Tools-And-Workflow/first-exercise/css/typography.css
+++ b/01-Dev-Tools-And-Workflow/first-exercise/css/typography.css
@@ -51,3 +51,13 @@ a {
 .source{
   background-color: #B21C1A;
 }
+
+/* Pesho's page CSS */
+.pg-page-main{
+  text-align: left;
+}
+
+.pg-page-text{
+  background-color: #1D1D1D;
+  height: fit-content;
+}
