--- a/03-Transitions-And-Animations/02-Fancy-List-Animation/Solution/style.css
+++ b/03-Transitions-And-Animations/02-Fancy-List-Animation/Solution/style.css
@@ -4,46 +4,53 @@ html {
     font-family: 'Roboto', sans-serif;
 }
 
+i {
+  margin-right: 0.5rem;
+}
+
 ul {
     list-style: none;
     margin: 3rem 0 0 2rem;
 }
 
-@media (ul) {
-    .list--item {
-      transition: 0.1s;
-      transform: translateY(10px);
-    }
-    .list--item:hover,
-    .list--item:focus {
-      transform: translateY(0);
-    }
-  }
+li {
+  animation-name: fadeInLeft;
+  animation-duration: 1s;
+  animation-fill-mode: both;
+  padding-bottom: 0.7rem;
+}
 
-@media (ul) {
-    ul  {
-      transform: translateY(100px);
-      transition: 0.2s;
-    }
-    ul {
-      transform: translateY(0);
-    }
-    ul:nth-child(1) span {
-      transition-delay: 0.0s;
-    }
-    ul:nth-child(2) span {
-      transition-delay: 0.05s;
-    }
-    ul:nth-child(3) span {
-      transition-delay: 0.1s;
-    }
-    ul:nth-child(4) span {
-      transition-delay: 0.15s;
-    }
-    ul:nth-child(5) span {
-      transition-delay: 0.2s;
-    }
-    ul:nth-child(6) span {
-      transition-delay: 0.25s;
-    }
+ul li:nth-child(2) {
+  animation-delay: 0.2s;
+}
+
+ul li:nth-child(3) {
+  animation-delay: 0.4s;
+}
+
+ul li:nth-child(4) {
+  animation-delay: 0.6s;
+}
+
+ul li:nth-child(5) {
+  animation-delay: 0.8s;
+}
+
+ul li:nth-child(6) {
+  animation-delay: 1s;
+}
+
+ul li:nth-child(7) {
+  animation-delay: 1.2s;
+}
+
+@keyframes fadeInLeft {
+  0% {
+     opacity: 0;
+     transform: translateX(-30px);
   }
+  100% {
+     opacity: 1;
+     transform: translateX(0);
+  }
+} 
